Version 2024.xxxxx (xxxxx 2024)
- Implemented: Enever, Added Budget Energy and Eneco
- Implemented: Enphase, Option for more Inverter details (ac/dc voltage, temperature, lastupdate)
- Fixed: Floorplan, better detection of switches
- Fixed: Hardware Setup, hiding extra parameters when selecting a python plugin
- Fixed: PythonEx framework, two notifications where send for switch type devices
- Changed: EvoHome, now making use of general logging system
- Changed: MQTT-AD, now also handles brightness scale number values as string
- Changed: SBFSpot, disabled error 28 error

Version 2024.4 (January 30th 2024)
- Fixed: cWebm, fixing high CPU load caused by time jumps
- Fixed: Memory leak in master/client setup
- Fixed: Python, device creation with options was not working correctly
- Fixed: Room Selection, switching to default room did not always work
- Fixed: Temperature compare chart for Fahrenheit

Version 2024.3 (January 24th 2024)
- Implemented: Domoticz Remote Server, added better error message if remote Domoticz device could not be created because accepting new devices is disabled under settings
- Implemented: InfluxDB Data push, add error message when return status code is forbidden
- Fixed: Alert sensor notification
- Fixed: Scripts/Lua/Blockly, setting a setPoint

Version 2024.2 (January 15th 2024)
- Implemented: Compare chart for most sensor types
- Implemented: Email, Splitting mime attachments over multiple lines
- Implemented: Notifications, Option to enable/disable
- Implemented: OpenZwave is back.... (No Support)
- Updated: Translations
- Changed: Comparing charts now uses correct Y-Axis label
- Changed: Internal, Last received is now handled differently, should solve possible hardware timeout issues
- Changed: MQTT, QoS is now set to 1 for all messages
- Fixed: MQTT-AD: Fan creation
- Fixed: Timer Plans, now also duplicates scenes

Version 2024.1 (January 1th 2024)
- Implemented: AlfenEve, added charging indication switch