@@ -994,6 +994,15 @@
 				<td><input type="text" id="apikey" style="width: 250px; padding: .2em;" class="text ui-widget-content ui-corner-all"></td>
 			</tr>
 			<tr>
+				<td align="right" style="width:110px"><label for="comboapiversion"><span data-i18n="API Version"></span>:</label></td>
+				<td>
+					<select id="comboapiversion" style="width:60px" class="combobox ui-corner-all">
+						<option value="0">2.5</option>
+						<option value="1">3.0</option>
+					</select>
+				</td>
+			</tr>
+			<tr>
 				<td align="right" style="width:110px"><label><span data-i18n="Location"></span>:</label></td>
 				<td>
 					<input type="text" id="location" style="width: 250px; padding: .2em;" class="text ui-widget-content ui-corner-all"><br>
