@@ -1,6 +1,7 @@
 Version 2024.xxxxx (xxxxx 2024)
 - Implemented: Enever, Added Budget Energy and Eneco
 - Implemented: Enphase, Option for more Inverter details (ac/dc voltage, temperature, lastupdate)
+- Implemented: OpenWeatherMap, API 3.0 support
 - Fixed: Floorplan, better detection of switches
 - Fixed: Hardware Setup, hiding extra parameters when selecting a python plugin
 - Fixed: PythonEx framework, two notifications where send for switch type devices
